dev/service.yml
apiVersion: v1
kind: Service
metadata:
  name: iot-app-service
spec:
  selector:
    app: iot-app
  ports:
  - port: 80
    protocol: TCP
    targetPort: 5000
