dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: iot-app
   namespace: iot-test
   annotations:
     kubernetes.io/ingress.class: "nginx"  
     cert-manager.io/cluster-issuer: letsencrypt-prod
# spec:
#    rules:
#     - http:
#         paths:
#           - pathType: Prefix
#             path: "/"
#             backend:
#               service:
#                 name: iot-app
#                 port:
#                   number: 80
spec:
  tls:
  - hosts:
    - iot.rke2-master.octolo.tech
    secretName: letsencrypt-prod
  rules:
  - host: iot.rke2-master.octolo.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iot-app
            port:
              number: 80
